app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-service
spec:
  selector:
    app: notes
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
